<resources>
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Alberto García de Haro.</b></string>
    <string name="accept">Aceptar</string>
    <string name="guide1">Primera página de la guía</string>
    <string name="saltar">Saltar guía</string>
    <string name="welcome">Bienvenido</string>
    <string name="subtitle">Pincha en Spyro para comenzar con la guía</string>
    <string name="guide_page1">Aquí podrás explorar a todos los personajes del mundo de Spyro.</string>
    <string name="guide_page2">Navega por los mundos disponibles.</string>
    <string name="guide_page3">Los siguientes objetos se pueden encontrar por el juego y coleccionarse, supongo.</string>
    <string name="guide_page4">Este botón informa sobre la APP</string>
    <string name="siguiente">Siguiente</string>
    <string name="about">Info</string>
    <string name="press_to_hide">Pulsa para cerrar</string>
    <string name="pages_completed">Partes completadas</string>
</resources>