<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:id="@+id/guideLayout" >

    <ImageView
        android:id="@+id/pulseImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        style="@style/guide_imageview" />

    <TextView
        android:id="@+id/textStep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guide_page1"
        style="@style/guide_textview"
        />

    <android.widget.Button
        android:id="@+id/next_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        style="@style/guide_button_next"
        />

    <android.widget.Button
        android:id="@+id/exitguide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saltar"
        style="@style/guide_button"
        />

</FrameLayout>
